Backend can parse the new frontend, abstracted parsers

--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,8 @@
               <br>
                 <div class="editor-body">
                   <input class="field" id="sidebar-label" value="new value" />
-                  <input class="button" type="button" value="save" id="sidebar-saveButton" />
+                  <input class="button" type="button" value="Save" id="sidebar-saveButton" />
+                  <input class="button" type="button" value="Delete" id="sidebar-saveButton" onclick='delete_selected();'/>
                   <div id="node-options"/>
                     Initial State: 
                     <input id="initial_state" type="checkbox" value="initial" />
