added prettier logo

--- a/site/index.html
+++ b/site/index.html
@@ -7,12 +7,12 @@
         <script type="text/javascript" src="js/FileSaver.js"></script>
         <script type="text/javascript" src="js/events.js"></script>
         <link href="js/vis/vis-network.min.css" rel="stylesheet" type="text/css" />
-        <title>Not JFlap FSM Editor</title>
+        <title>JState</title>
     </head>
     <body onload="init();">
         <script type="text/javascript" src="js/main.js"></script>
         <div class='top'>
-            <h1>Not JFlap FSM Editor</h1>
+            <img src="img/JState.png"/>
         </div>
         <!-- Sidebar -->
         <div class='sidebar'>
